_modules/aws/kubernetes-stacked/module/manifests/kyverno-policies/alb-ingress.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-alb-ingress-annotations
  annotations:
    policies.kyverno.io/title: Add AWS ALB ingress annotations
    policies.kyverno.io/category: ingress
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ingress, Annotation
    policies.kyverno.io/description: >-
      ensure appropriate ingress annotations are present for AWS ALB ingress
spec:
  rules:
    - name: add-basic-annotations
      match:
        any:
          - resources:
              kinds:
                - Ingress
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(alb.ingress.kubernetes.io/target-type): ip
              +(alb.ingress.kubernetes.io/actions.ssl-redirect): '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
              +(alb.ingress.kubernetes.io/listen-ports): '[{"HTTP": 80}, {"HTTPS": 443}]'
